<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="franken_version">FrankenRom version</string>
    <string name="franken_version_default">Unknown</string>
    <string name="header_category_personalization">UI settings</string>
    <string name="lab_title">Lab</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="enabled">Enabled</string>
    <string name="add">Add</string>
    <string name="choose_app">Choose app</string>
    <string name="systemui_restart_title">SystemUI restart required</string>
    <string name="systemui_restart_message">For all changes to take effect, a SystemUI restart is required. Restart SystemUI now?</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right" translatable="false">→</string>
    <string name="arrow_down" translatable="false">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint" translatable="false">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="statusbar_bar_title">Statusbar</string>
    <string name="statusbar_bar_summary">Adjust various statusbar elements</string>
    <string name="icon_category">Icons</string>
    <string name="statusbar_items_title">Statusbar items</string>
    <string name="status_bar_tuner_summary">Edit status bar icons and options</string>
    <string name="battery_style_category_title">Battery icon</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="status_bar_battery_style_port">Portrait</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="battery_style_dotted_circle">Dotted circle</string>
    <string name="network_traffic_state_title">Network traffic</string>
    <string name="network_traffic_state_summary">Show net activity in statusbar</string>
    <string name="network_traffic_autohide_threshold_title">Net activity autohide threshold (KB/s)</string>
    <string name="clock_style_category_title">Clock Settings</string>
    <string name="clock_style_category_summary">Franken Custom Clock Settings</string>
    <string name="status_bar_clock_title">Clock settings</string>
    <string name="status_bar_clock_show">Show clock and date</string>
    <string name="status_bar_clock_style_title">Clock style</string>
    <string name="status_bar_clock_style_right">Right</string>
    <string name="status_bar_clock_style_center">Center</string>
    <string name="status_bar_clock_style_left">Left</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden (default)</string>
    <string name="clock_seconds_display">Show seconds</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across the status bar</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="status_bar_logo_title">FrankenRom logo</string>
    <string name="status_bar_logo_summary">Add Logo to your Statusbar</string>
    <string name="battery_bar_title">Battery bar</string>
    <string name="battery_bar_location">Battery bar location</string>
    <string name="battery_bar_color">Battery bar color</string>
    <string name="battery_bar_charging_color">Battery bar charging color</string>
    <string name="battery_bar_battery_low_color">Battery bar low battery color</string>
    <string name="battery_bar_style_title">Battery bar style</string>
    <string name="battery_bar_thickness_title">Battery bar thickness</string>
    <string name="battery_bar_thickness_summary">%1$s</string>
    <string name="battery_bar_animate_title">Charging animation</string>
    <string name="battery_bar_animate_summary">The charging animation may result in a poor user experience. Enable at your own discretion.</string>
    <string name="battery_bar_hide">Hide</string>
    <string name="battery_bar_statusbar">Statusbar</string>
    <string name="battery_bar_topnav">Top of navbar</string>
    <string name="battery_bar_bottomnav">Bottom of navbar</string>
    <string name="battery_bar_reg">Regular</string>
    <string name="battery_bar_center">Center-mirrored</string>
    <string name="battery_bar_reversed">Reversed</string>
    <string name="battery_bar_use_gradient_color">Use gradient color</string>
    <string name="battery_bar_gradient_color_summary">Use gradient color as a scale for the battery level</string>
    <string name="battery_bar_high_color">High level color"</string>
    <string name="battery_bar_low_color">Low level color"</string>
    <string name="notification_title">Notification</string>
    <string name="notification_summary">Adjust LEDs and notification behavior</string>
    <string name="notification_category">Notifications</string>
    <string name="headsup_category">Heads Up</string>
    <string name="heads_up_notifications">Heads up options</string>
    <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
    <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
    <string name="add_heads_up_package">Add app</string>
    <string name="add_heads_up_stoplist_summary">Disable heads up notifications in these applications</string>
    <string name="add_heads_up_blacklist_summary">Disable heads up from these applications</string>
    <string name="heads_up_stoplist_title">Stoplist</string>
    <string name="heads_up_blacklist_title">Blacklist</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="heads_up_time_out_title">Time out</string>
    <string name="heads_up_time_out_summary">Peeking notifications will show for <xliff:g id="number">%d</xliff:g> seconds</string>
    <string name="heads_up_time_out_2sec">2 seconds</string>
    <string name="heads_up_time_out_4sec">4 seconds</string>
    <string name="heads_up_time_out_5sec">5 seconds</string>
    <string name="heads_up_time_out_6sec">6 seconds</string>
    <string name="heads_up_time_out_8sec">8 seconds</string>
    <string name="heads_up_time_out_10sec">10 seconds</string>
    <string name="heads_up_snooze_title">Snooze timer</string>
    <string name="heads_up_snooze_summary_one_minute">Swiping up on peeking notifications will snooze heads up from that application for 1 minute</string>
    <string name="heads_up_snooze_summary">Swiping up on peeking notifications will snooze heads up from that application for <xliff:g id="number">%d</xliff:g> minutes</string>
    <string name="heads_up_snooze_disabled_summary">Snooze timer is disabled</string>
    <string name="heads_up_snooze_1min">1 minute</string>
    <string name="heads_up_snooze_5min">5 minutes</string>
    <string name="heads_up_snooze_10min">10 minutes</string>
    <string name="heads_up_snooze_15min">15 minutes</string>
    <string name="heads_up_snooze_20min">20 minutes</string>
    <string name="toast_icon_title">Toast icon</string>
    <string name="toast_icon_summary">Display icon of activity that generates toast message</string>
    <string name="quicksettings_title">Quick Settings</string>
    <string name="quicksettings_summary">Manage your quick tiles and expanded statusbar</string>
    <string name="expanded_category">Expanded</string>
    <string name="qs_category">Quick settings</string>
    <string name="qs_style_category_title">Quick Settings Options</string>
    <string name="brightness_slider_title">Brightness slider</string>
    <string name="brightness_slider_summary">Show the brightness slider in quick settings</string>
    <string name="qs_brightness_position_bottom_title">Brightness slider on bottom</string>
    <string name="qs_brightness_position_bottom_summary">Show a brightness slider on bottom quick settings</string>
    <string name="brightness_icon_title">Auto Brightness Icon</string>
    <string name="brightness_icon_summary">Show a brightness icon to the left of the brighness slider to adjust auto-brightness</string>
    <string name="qs_panel_alpha_title">Opacity</string>
    <string name="qs_footer_warnings_title">QS footer warnings</string>
    <string name="qs_footer_warnings_summary">Display a warning at bottom of QS panel when network is monitored by external apps or vpn</string>
    <string name="force_expanded_notifications_title">Force expanded notifications</string>
    <string name="force_expanded_notifications_summary">Force apps that support expanded notifications</string>
    <string name="screenshot_type_title">Screenshot type</string>
    <string name="screenshot_type_fullscreen">Fullscreen screenshots</string>
    <string name="screenshot_type_partial">Partial screenshots</string>
    <string name="navigation_title">Navigation</string>
    <string name="navigation_summary">Customize navigation bar style and behavior</string>
    <string name="navigation_category">Navigation</string>
    <string name="navbar_tuner_title">Edit navigation bar</string>
    <string name="navbar_tuner_summary">Edit the navigation bar layout and buttons</string>
    <string name="allow_incall_home_title">Home button when ringing</string>
    <string name="allow_incall_home_summary">Allow to use Home button when device is ringing</string>
    <string name="hardware_keys_category">Hardware keys</string>
    <string name="hardware_keys_disable_title">Disable keys</string>
    <string name="button_brightness_title">Backlight</string>
    <string name="backlight_timeout_title">Buttons backlight timeout</string>
    <string name="backlight_timeout_on">Enabled always</string>
    <string name="backlight_timeout_3s">3 sec</string>
    <string name="backlight_timeout_default">5 sec (default)</string>
    <string name="backlight_timeout_10s">10 sec</string>
    <string name="backlight_timeout_15s">15 sec</string>
    <string name="backlight_timeout_20s">20 sec</string>
    <string name="backlight_timeout_30s">30 sec</string>
    <string name="button_brightness_sw_title">Enable backlight</string>
</resources>